webアプリケーションじゃないやつにする