@@ -1,5 +1,5 @@
 FROM gradle:jdk21
 COPY . ./
-RUN ./gradlew installDist
+#RUN ./gradlew installDist
 EXPOSE 8081
-CMD ["build/install/Java-Web-Server-Performance-Test/bin/Java-Web-Server-Performance-Test"]
+CMD ["java", "-XX:+UseG1GC","-Xlog:gc*:stdout", "src/main/java/Bench.java", ""]
